# fragment

./: .gitignore  2.1.basic_lighting.fs  2.1.basic_lighting.vs  CMakeLists.txt  README.md  camera.h  camera.hpp  fragment.glsl  glad.c  main.cpp  shader.cpp  shader.hpp  shader_m.h  vertex.glsl  vertex.hpp
glad/: glad.c  glad.h
shaders/: basic.fs  basic.vs
